# chrome-agent-bridge

./: .gitignore  README.md  SKILL.md  package.json
extension/: .gitignore  LICENSE  PRIVACY.md  background.js  content.js  manifest.json  popup.html  popup.js
native-host/: manifest.json
rust-cli/: Cargo.toml
rust-cli/resources/: SKILL.md
rust-cli/src/: cli.rs  client.rs  config.rs  error.rs  main.rs  protocol.rs  recorder.rs
rust-cli/src/commands/: dev.rs  docs.rs  mod.rs  screenshot.rs  session.rs  setup.rs  start.rs
scripts/: fix-native-manifest-quick.sh  install-native-host.sh  rebuild-extension.sh  release-notes.sh
