[package]
name = "chrome-agent-bridge"
version = "1.0.0"
edition = "2021"
description = "Control Chrome browser from LLM agents via WebSocket"
license = "MIT"
repository = "https://github.com/1jehuang/chrome-agent-bridge"
readme = "../README.md"
keywords = ["chrome", "browser", "automation", "agent", "websocket"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "browser"
path = "src/main.rs"

[[bin]]
name = "chrome-agent-bridge-host"
path = "src/bin/host.rs"

[[bin]]
name = "firefox-agent-bridge-host"
path = "src/bin/host.rs"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "cargo", "env"] }

# WebSocket client
tokio-tungstenite = "0.24"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "io-util", "sync", "net", "process", "signal"] }
futures-util = "0.3"

# JSON handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64 for screenshot decoding
base64 = "0.22"

# URL parsing (for autoLogin domain extraction)
url = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Platform-specific home directory
dirs = "5"

# Vault credential lookup
bronzewarden = { path = "../../projects/bronzewarden" }
rpassword = "7"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
